--- a/pipeline_transform.ipynb
+++ b/pipeline_transform.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "source": [
-    "import os, uuid, yaml\r\n",
+    "import io, os, uuid, yaml\r\n",
+    "import numpy as np\r\n",
+    "import pandas as pd\r\n",
     "from azure.storage.blob import BlobServiceClient, BlobClient, ContainerClient\r\n",
-    "from src.pipeline import utils\r\n"
+    "from src.pipeline import utils, azure_tools\r\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "source": [
     "credentials = utils.load_credentials(\"blob_storage\")"
    ],
@@ -24,51 +26,66 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "blob_service_client = BlobServiceClient.from_connection_string(credentials['conn_string'])"
+    "container_name = \"reports-ingredion\"\r\n",
+    "container_client = azure_tools.get_container_client(container_name,credentials['conn_string'])"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "# name of the existing container\r\n",
+    "blob_list = azure_tools.get_blob_list(container_client)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "df = azure_tools.transform_pl_files(blob_list[:12], container_client)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Processing:  1-2016 US P&L by Ship To & Material(ZBW_ZANDTM001_Q00NI)\n",
+      "Processing:  1-2017 US P&L by Ship To & Material(ZBW_ZANDTM001_Q00NI)\n",
+      "Processing:  1-2018 US P&L by Ship To & Material(ZBW_ZANDTM001_Q00NI)\n",
+      "Processing:  1-2019 US P&L by Ship To & Material(ZBW_ZANDTM001_Q00NI)\n",
+      "Processing:  1-2020 US P&L by Ship To & Material(ZBW_ZANDTM001_Q00NI)\n",
+      "Processing:  10-2016 US P&L by Ship To & Material(ZBW_ZANDTM001_Q00NI)\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "source": [
-    "# name of the existing container\r\n",
-    "container_name = \"reports-ingredion\"\r\n",
-    "container_client = blob_service_client.get_container_client(container_name)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "source": [
-    "blob_list = []\r\n",
-    "blob_it = container_client.list_blobs()\r\n",
-    "for blob in blob_it:\r\n",
-    "    file_name = blob.name\r\n",
-    "    blob_list.append(file_name)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "source": [
-    "len(blob_list)"
+    "df['Fiscal year/period'].value_counts()"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "120"
+       "1.2019     6494\n",
+       "10.2016    6338\n",
+       "1.2016     6312\n",
+       "1.2020     6196\n",
+       "1.2017     6115\n",
+       "1.2018     5961\n",
+       "Name: Fiscal year/period, dtype: int64"
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 6
     }
    ],
    "metadata": {}
