--- a/read_tranform_data.ipynb
+++ b/read_tranform_data.ipynb
@@ -2,22 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import io, os, uuid, yaml\r\n",
     "import numpy as np\r\n",
     "import pandas as pd\r\n",
     "from azure.storage.blob import BlobServiceClient, BlobClient, ContainerClient\r\n",
-    "from src.pipeline import utils, azure_tools\r\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "source": [
-    "credentials = utils.load_credentials(\"blob_storage\")"
+    "from src.pipeline import utils, azure_tools"
    ],
    "outputs": [],
    "metadata": {}
@@ -26,8 +17,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "container_input = \"reports-ingredion\"\r\n",
-    "container_client = azure_tools.get_container_client(container_input,credentials['conn_string'])"
+    "credentials = utils.load_credentials(\"blob_storage\")"
    ],
    "outputs": [],
    "metadata": {}
@@ -36,61 +26,94 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "# name of the existing container\r\n",
-    "blob_list = azure_tools.get_blob_list(container_client)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "source": [
-    "df = azure_tools.transform_pl_files(blob_list[:10], container_client)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Processing:  1-2016 US P&L by Ship To & Material(ZBW_ZANDTM001_Q00NI)\n",
-      "Processing:  1-2017 US P&L by Ship To & Material(ZBW_ZANDTM001_Q00NI)\n",
-      "Processing:  1-2018 US P&L by Ship To & Material(ZBW_ZANDTM001_Q00NI)\n",
-      "Processing:  1-2019 US P&L by Ship To & Material(ZBW_ZANDTM001_Q00NI)\n",
-      "Processing:  1-2020 US P&L by Ship To & Material(ZBW_ZANDTM001_Q00NI)\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "source": [
-    "df['Fiscal year/period'].value_counts()"
+    "container_name = \"intermidiate-ingredion\"\r\n",
+    "#container_client = ContainerClient.from_connection_string(conn_str=credentials['conn_string'], container_name=container_name)\r\n",
+    "#container_client.create_container()"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "1.2019    6494\n",
-       "1.2016    6312\n",
-       "1.2020    6196\n",
-       "1.2017    6115\n",
-       "1.2018    5961\n",
-       "Name: Fiscal year/period, dtype: int64"
+       "{'etag': '\"0x8D96F0D0D1F59D7\"',\n",
+       " 'last_modified': datetime.datetime(2021, 9, 3, 19, 0, 9, tzinfo=datetime.timezone.utc),\n",
+       " 'client_request_id': '2891acc0-0ce9-11ec-aa3c-70cf49f87004',\n",
+       " 'request_id': 'c5b3cfe6-e01e-002d-3cf5-a016d6000000',\n",
+       " 'version': '2020-06-12',\n",
+       " 'date': datetime.datetime(2021, 9, 3, 19, 0, 8, tzinfo=datetime.timezone.utc)}"
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
+   "source": [
+    "container_client = azure_tools.get_container_client(container_name,credentials['conn_string'])\r\n",
+    "blob_list = azure_tools.get_blob_list(container_client)\r\n",
+    "blob_list"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['my_blob', 'my_test']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "source": [
+    "stream = container_client.download_blob(\"my_test\")"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "source": [
+    "# Save in dataframe\r\n",
+    "file = io.BytesIO()\r\n",
+    "stream.readinto(file)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4581756"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "source": [
+    "df = pd.read_parquet(file)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "source": [
     "df.info()"
    ],
@@ -160,36 +183,10 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "## Upload to Blob"
-   ],
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
-   "source": [
-    "container_output = \"intermidiate-ingredion\""
-   ],
+   "execution_count": null,
+   "source": [],
    "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "source": [
-    "azure_tools.upload_df_parquet(df, \"my_test\", credentials[\"conn_string\"],container_output)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Uploded file:  my_test\n"
-     ]
-    }
-   ],
    "metadata": {}
   },
   {
