--- a/read_tranform_data.ipynb
+++ b/read_tranform_data.ipynb
@@ -30,28 +30,12 @@
     "#container_client = ContainerClient.from_connection_string(conn_str=credentials['conn_string'], container_name=container_name)\r\n",
     "#container_client.create_container()"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "{'etag': '\"0x8D96F0D0D1F59D7\"',\n",
-       " 'last_modified': datetime.datetime(2021, 9, 3, 19, 0, 9, tzinfo=datetime.timezone.utc),\n",
-       " 'client_request_id': '2891acc0-0ce9-11ec-aa3c-70cf49f87004',\n",
-       " 'request_id': 'c5b3cfe6-e01e-002d-3cf5-a016d6000000',\n",
-       " 'version': '2020-06-12',\n",
-       " 'date': datetime.datetime(2021, 9, 3, 19, 0, 8, tzinfo=datetime.timezone.utc)}"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 4
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "source": [
     "container_client = azure_tools.get_container_client(container_name,credentials['conn_string'])\r\n",
     "blob_list = azure_tools.get_blob_list(container_client)\r\n",
@@ -62,13 +46,29 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['my_blob', 'my_test']"
+       "[]"
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 9
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "container_client.delete_blob('US/1-2018.parquet')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   },
   {
