--- a/pipeline_transform.ipynb
+++ b/pipeline_transform.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import io, os, uuid, yaml\r\n",
     "import numpy as np\r\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "source": [
     "credentials = utils.load_credentials(\"blob_storage\")"
    ],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
     "container_output = \"intermidiate-ingredion\""
    ],
@@ -85,38 +85,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "source": [
     "container_client = azure_tools.get_container_client(container_output,credentials['conn_string'])\r\n",
-    "blob_list = azure_tools.get_blob_list(container_client)\r\n",
-    "blob_list"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "['US/1-2016.parquet', 'US/1-2017.parquet', 'US/1-2018.parquet']"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 13
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "source": [
-    "df_test = azure_tools.read_transform_pl(container_output, credentials['conn_string'], country=\"US\")"
+    "blob_list = azure_tools.get_blob_list(container_client)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
+   "source": [
+    "len(blob_list)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# for file in blob_list:\r\n",
+    "#     container_client.delete_blob(file)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "source": [
+    "df_test = azure_tools.read_transform_pl(container_output,credentials['conn_string'])"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "source": [
     "df_test.shape"
    ],
@@ -125,18 +143,18 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(18388, 48)"
+       "(375011, 48)"
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 24
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "source": [
     "df_test.info()"
    ],
@@ -146,60 +164,60 @@
      "name": "stdout",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 18388 entries, 0 to 5960\n",
+      "Int64Index: 375011 entries, 0 to 7328\n",
       "Data columns (total 48 columns):\n",
-      " #   Column                             Non-Null Count  Dtype  \n",
-      "---  ------                             --------------  -----  \n",
-      " 0   Fiscal year/period                 18388 non-null  float64\n",
-      " 1   Company Code                       18388 non-null  object \n",
-      " 2   Unnamed: 8                         18388 non-null  float64\n",
-      " 3   Ship to party                      18388 non-null  object \n",
-      " 4   Unnamed: 10                        18388 non-null  object \n",
-      " 5   Material                           18145 non-null  object \n",
-      " 6   Commercial Name                    18388 non-null  object \n",
-      " 7   Sales Qty Total MT                 18384 non-null  float64\n",
-      " 8   3P Sales Qty Total MT              16134 non-null  float64\n",
-      " 9   Gross Revenue USD                  18388 non-null  float64\n",
-      " 10  Discounts USD                      18388 non-null  float64\n",
-      " 11  New Net Revenue                    18388 non-null  float64\n",
-      " 12  N3P Net Revenue                    16138 non-null  float64\n",
-      " 13  Net Corn                           18388 non-null  float64\n",
-      " 14  Raw Material Other                 18388 non-null  float64\n",
-      " 15  Utilities                          18388 non-null  float64\n",
-      " 16  Waste                              18388 non-null  float64\n",
-      " 17  Repair                             18388 non-null  float64\n",
-      " 18  Labor                              18388 non-null  float64\n",
-      " 19  OHMfg                              18388 non-null  float64\n",
-      " 20  Supplies & Packaging               18388 non-null  float64\n",
-      " 21  Supplies - Indirect                18388 non-null  float64\n",
-      " 22  Depreciation                       18388 non-null  float64\n",
-      " 23  3P Freight USD                     16138 non-null  float64\n",
-      " 24  Logistics                          18388 non-null  float64\n",
-      " 25  COS Other                          18388 non-null  float64\n",
-      " 26  New COGS                           18388 non-null  float64\n",
-      " 27  Freight USD                        18388 non-null  float64\n",
-      " 28  Intercompany Cost Elimination      18388 non-null  float64\n",
-      " 29  Gross Profit                       18388 non-null  float64\n",
-      " 30  SGA Total                          18388 non-null  float64\n",
-      " 31  Other (Income)/Expense             18388 non-null  float64\n",
-      " 32  Operating Income                   18388 non-null  float64\n",
-      " 33  Other Non-Operating (Income)/Loss  9 non-null      float64\n",
-      " 34  Special Items                      9 non-null      float64\n",
-      " 35  Interco Dividends                  9 non-null      float64\n",
-      " 36  Charge Back                        9 non-null      float64\n",
-      " 37  Exchange Gain / Loss               9 non-null      float64\n",
-      " 38  Intercompany Financing Cost        9 non-null      float64\n",
-      " 39  Financing Costs                    9 non-null      float64\n",
-      " 40  Fees and Royalties                 9 non-null      float64\n",
-      " 41  PBT                                18388 non-null  float64\n",
-      " 42  Taxes on Income                    9 non-null      float64\n",
-      " 43  Net Income                         18388 non-null  float64\n",
-      " 44  Minority Income                    9 non-null      float64\n",
-      " 45  Adj Minority Income                9 non-null      float64\n",
-      " 46  Total Net Income                   18388 non-null  float64\n",
-      " 47  ING10000 INGR Net Income           18388 non-null  float64\n",
+      " #   Column                             Non-Null Count   Dtype  \n",
+      "---  ------                             --------------   -----  \n",
+      " 0   Fiscal year/period                 375011 non-null  float64\n",
+      " 1   Company Code                       375011 non-null  object \n",
+      " 2   Unnamed: 8                         375011 non-null  float64\n",
+      " 3   Ship to party                      375011 non-null  object \n",
+      " 4   Unnamed: 10                        375011 non-null  object \n",
+      " 5   Material                           370077 non-null  object \n",
+      " 6   Commercial Name                    375011 non-null  object \n",
+      " 7   Sales Qty Total MT                 373705 non-null  float64\n",
+      " 8   3P Sales Qty Total MT              322723 non-null  float64\n",
+      " 9   Gross Revenue USD                  375011 non-null  float64\n",
+      " 10  Discounts USD                      375011 non-null  float64\n",
+      " 11  New Net Revenue                    375011 non-null  float64\n",
+      " 12  N3P Net Revenue                    323945 non-null  float64\n",
+      " 13  Net Corn                           375011 non-null  float64\n",
+      " 14  Raw Material Other                 375011 non-null  float64\n",
+      " 15  Utilities                          375011 non-null  float64\n",
+      " 16  Waste                              375011 non-null  float64\n",
+      " 17  Repair                             375011 non-null  float64\n",
+      " 18  Labor                              375011 non-null  float64\n",
+      " 19  OHMfg                              375011 non-null  float64\n",
+      " 20  Supplies & Packaging               375011 non-null  float64\n",
+      " 21  Supplies - Indirect                375011 non-null  float64\n",
+      " 22  Depreciation                       375011 non-null  float64\n",
+      " 23  3P Freight USD                     323945 non-null  float64\n",
+      " 24  Logistics                          375011 non-null  float64\n",
+      " 25  COS Other                          375011 non-null  float64\n",
+      " 26  New COGS                           375011 non-null  float64\n",
+      " 27  Freight USD                        375011 non-null  float64\n",
+      " 28  Intercompany Cost Elimination      375011 non-null  float64\n",
+      " 29  Gross Profit                       375011 non-null  float64\n",
+      " 30  SGA Total                          375011 non-null  float64\n",
+      " 31  Other (Income)/Expense             375011 non-null  float64\n",
+      " 32  Operating Income                   375011 non-null  float64\n",
+      " 33  Other Non-Operating (Income)/Loss  398 non-null     float64\n",
+      " 34  Special Items                      398 non-null     float64\n",
+      " 35  Interco Dividends                  398 non-null     float64\n",
+      " 36  Charge Back                        398 non-null     float64\n",
+      " 37  Exchange Gain / Loss               398 non-null     float64\n",
+      " 38  Intercompany Financing Cost        398 non-null     float64\n",
+      " 39  Financing Costs                    398 non-null     float64\n",
+      " 40  Fees and Royalties                 398 non-null     float64\n",
+      " 41  PBT                                375011 non-null  float64\n",
+      " 42  Taxes on Income                    398 non-null     float64\n",
+      " 43  Net Income                         375011 non-null  float64\n",
+      " 44  Minority Income                    398 non-null     float64\n",
+      " 45  Adj Minority Income                398 non-null     float64\n",
+      " 46  Total Net Income                   375011 non-null  float64\n",
+      " 47  ING10000 INGR Net Income           375011 non-null  float64\n",
       "dtypes: float64(43), object(5)\n",
-      "memory usage: 6.9+ MB\n"
+      "memory usage: 140.2+ MB\n"
      ]
     }
    ],
