fix container name

--- a/pipeline_transform.ipynb
+++ b/pipeline_transform.ipynb
@@ -46,7 +46,17 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "container_output = \"intermidiate-ingredion\""
+    "container_output = \"intermediate-ingredion\""
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# blob_client = BlobServiceClient.from_connection_string(credentials['conn_string'])\r\n",
+    "# container_client = blob_client.create_container(container_output)"
    ],
    "outputs": [],
    "metadata": {}
