--- a/pipeline_transform.ipynb
+++ b/pipeline_transform.ipynb
@@ -207,6 +207,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "with open(\"credentialsdb.yml\") as stream:\n",
+    "    cred = yaml.safe_load(stream)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "outputs": [
     {
@@ -272,11 +287,11 @@
     }
    ],
    "source": [
-    "params = urllib.parse.quote_plus(\"DRIVER={ODBC Driver 17 for SQL Server};\"\n",
-    "                                 \"SERVER=vm-poc-dev-eastus-001.database.windows.net;\"\n",
-    "                                 \"DATABASE=ingredion;\"\n",
-    "                                 \"UID=admindbuser;\"\n",
-    "                                 \"PWD=Innovative.Solutions2021\")\n",
+    "params = urllib.parse.quote_plus(f\"DRIVER={cred['DRIVER']};\"\n",
+    "                                 f\"SERVER={cred['SERVER']};\"\n",
+    "                                 f\"DATABASE={cred['DATABASE']};\"\n",
+    "                                 f\"UID={cred['UID']};\"\n",
+    "                                 f\"PWD={cred['PWD']}\")\n",
     "#engine = sqlalchemy.create_engine(f\"mssql+pyodbc:///?odbc_connect={params}\")\n",
     "for f in blob_list_us[21:40]:\n",
     "    country, type, file_name = f.split(\"/\")\n",
